--- a/Config/DefaultEditorPerProjectUserSettings.ini
+++ b/Config/DefaultEditorPerProjectUserSettings.ini
@@ -39,4 +39,37 @@ bPromoteOutputLogWarningsDuringPIE=False
 AssetEditorOpenLocation=MainWindow
 bEnableColorizedEditorTabs=True
 
+[/Script/UnrealEd.EditorPerProjectUserSettings]
+bDisplayUIExtensionPoints=False
+bDisplayDocumentationLink=False
+bDisplayActionListItemRefIds=False
+bAlwaysGatherBehaviorTreeDebuggerData=False
+bDisplayEngineVersionInBadge=False
+bUseSimplygonSwarm=False
+SimplygonServerIP=127.0.0.1
+bEnableSwarmDebugging=False
+SimplygonSwarmDelay=5000
+SwarmNumOfConcurrentJobs=16
+SwarmMaxUploadChunkSizeInMB=100
+SwarmIntermediateFolder=D:/Unreal projects/TestingGrounds/Intermediate/Simplygon/
+bAutomaticallyHotReloadNewClasses=False
+bShowCompilerLogOnCompileError=False
+bKeepFbxNamespace=False
+bShowImportDialogAtReimport=False
+DataSourceFolder=(Path="")
+bKeepAttachHierarchy=True
+bAnimationReimportWarnings=False
+bUseCurvesForDistributions=False
+PropertyMatrix_NumberOfPasteOperationsBeforeWarning=20
+bSCSEditorShowGrid=True
+bSCSEditorShowFloor=False
+SCSViewportCameraSpeed=4
+bAutoloadCheckedOutPackages=False
+bSuppressFullyLoadPrompt=True
+bAllowSelectTranslucent=True
+AssetViewerProfileName=
+MaterialQualityLevel=1
+PreviewShaderPlatformName=None
+bIsMaterialQualityOverridePlatform=False
+
 
